force-app/main/default/objects/Asset/fields/AlarmNotification_Input_Data_Systems__c.field-meta.xml
<CustomField>
    <fullName>AlarmNotification_Input_Data_Systems__c</fullName>
    <description>SE-1173</description>
    <label>AlarmNotification- Input Data Systems</label>
    <length>255</length>
    <type>Text</type>
</CustomField>