force-app/main/default/objects/Asset/fields/AlarmNotification_Output_Data_Systems__c.field-meta.xml
<CustomField>
    <fullName>AlarmNotification_Output_Data_Systems__c</fullName>
    <description>SE-1173</description>
    <label>AlarmNotification- Output Data Systems</label>
    <length>255</length>
    <type>Text</type>
</CustomField>