force-app/main/default/objects/Asset/fields/Count_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Asset__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>