force-app/main/default/objects/Asset/fields/HECSVC_Voalte_Me_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>HECSVC_Voalte_Me_SW_Version__c</fullName>
    <description>SE-1173</description>
    <label>Voalte Me - SW Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android Voalte Me 3.5.4</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.6.1</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.6.3</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.0</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.1</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.10</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.12</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.13</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.3</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.5</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.7.9</fullName>
            </value>
            <value>
                <fullName>Android Voalte Me 3.9.0</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.5.2</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.5.3</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.5.4</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.5.6</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.6.0</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.6.1</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.6.2</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.6.3</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.6.4</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.0</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.1</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.10</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.11</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.14</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.2</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.3</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.4</fullName>
            </value>
            <value>
                <fullName>iOS Voalte Me 3.7.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>