force-app/main/default/objects/Asset/fields/HRCFSL_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Additional_Information__c</fullName>
    <formula>IF(ISBLANK(Text( HRCFSL_Next_PM_DT__c )),&apos; &apos;,Text(HRCFSL_Next_PM_DT__c) ) &amp;
IF( HRCFSL_Next_PM_DT__c &lt;  TODAY()  ,&apos; (Maintenance Overdue) &apos;,&apos; &apos; ) &amp;
IF(ISBLANK( Text(HRCFSL_Number_Open_WOs__c )),&apos; &apos;,&apos; • Open WO&apos; + &quot;&apos;s&quot; +&apos; &apos; &amp; Text(HRCFSL_Number_Open_WOs__c) )</formula>
    <label>Additional Information</label>
    <type>Text</type>
</CustomField>