force-app/main/default/objects/Asset/fields/HRCFSL_Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Asset_Status__c</fullName>
    <description>SE-108 : for maintaining the asset status based on IBoar validation.</description>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Awaiting Maintenance</label>
            </value>
            <value>
                <fullName>WA</fullName>
                <label>Warehouse Available</label>
            </value>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>AUP-In Storage</label>
            </value>
            <value>
                <fullName>AI</fullName>
                <label>Awaiting Inspection</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Account Lost</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>AUP-In Use</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Asset Transfer</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bed Hold</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Customer Hold</label>
            </value>
            <value>
                <fullName>EA</fullName>
                <label>Eval - Assigned for Delivery</label>
            </value>
            <value>
                <fullName>ED</fullName>
                <label>Eval - Damaged</label>
            </value>
            <value>
                <fullName>EE</fullName>
                <label>Eval - Extended</label>
            </value>
            <value>
                <fullName>EL</fullName>
                <label>Eval - Lost</label>
            </value>
            <value>
                <fullName>EM</fullName>
                <label>Eval - Awaiting Maintenance</label>
            </value>
            <value>
                <fullName>EN</fullName>
                <label>Eval - Evaluation Not Tracked</label>
            </value>
            <value>
                <fullName>EP</fullName>
                <label>Eval - On Hold for Rep</label>
            </value>
            <value>
                <fullName>EQ</fullName>
                <label>Eval - Quoted</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Eval - Scrapped</label>
            </value>
            <value>
                <fullName>EV</fullName>
                <label>Eval - Eval Prodt Vest&amp;Charles</label>
            </value>
            <value>
                <fullName>EY</fullName>
                <label>Eval - Hostage</label>
            </value>
            <value>
                <fullName>HO</fullName>
                <label>Hostage</label>
            </value>
            <value>
                <fullName>L1</fullName>
                <label>Step 1-LEP</label>
            </value>
            <value>
                <fullName>L2</fullName>
                <label>Step 2-LEP</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <label>PM Captive Notification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>