force-app/main/default/objects/Asset/fields/HRCFSL_Billing_On_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Billing_On_Date__c</fullName>
    <description>SE-836 - this field is used to populate the billing-on-date on the work order if the billing-on-date on the work order is blank and the work order is of SQR work type.</description>
    <label>Billing On Date</label>
    <type>Date</type>
</CustomField>