force-app/main/default/objects/Asset/fields/HRCFSL_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_IP_Address__c</fullName>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>