force-app/main/default/objects/Asset/fields/HRCFSL_Model_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Model_Description__c</fullName>
    <label>Product Model Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>