force-app/main/default/objects/Asset/fields/HRCFSL_Next_PM_DT__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Next_PM_DT__c</fullName>
    <description>PM Due Date Field</description>
    <label>Next PM Date</label>
    <type>Date</type>
</CustomField>