force-app/main/default/objects/Asset/fields/HRCFSL_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product__c</fullName>
    <description>#HF 45 : for storing the asset name</description>
    <formula>Name</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>