force-app/main/default/objects/Asset/fields/HRCFSL_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Family__c</fullName>
    <label>Product Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>