force-app/main/default/objects/Asset/fields/HRCFSL_Product_Family_Desc__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Family_Desc__c</fullName>
    <label>Product Family Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>