force-app/main/default/objects/Asset/fields/HRCFSL_Real_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Real_Product_Family__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>