force-app/main/default/objects/Asset/fields/HRCFSL_Software__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Software__c</fullName>
    <label>Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>