force-app/main/default/objects/Asset/fields/HRCFSL_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Software_Version__c</fullName>
    <label>Software Version*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>