force-app/main/default/objects/Asset/fields/HRCSVC_Advanced_Applications__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Advanced_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Advanced Applications</label>
    <type>Checkbox</type>
</CustomField>