force-app/main/default/objects/Asset/fields/HRCSVC_Advanced_Integrations__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Advanced_Integrations__c</fullName>
    <description>SE-1173</description>
    <label>Advanced Integrations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epic Alerts</fullName>
            </value>
            <value>
                <fullName>Hurley Paging</fullName>
            </value>
            <value>
                <fullName>Teletracking</fullName>
            </value>
            <value>
                <fullName>TUGS Robots</fullName>
            </value>
            <value>
                <fullName>Airstrip</fullName>
            </value>
            <value>
                <fullName>Masimo Safety Net</fullName>
            </value>
            <value>
                <fullName>RedAlert</fullName>
            </value>
            <value>
                <fullName>ReadyList</fullName>
            </value>
            <value>
                <fullName>SmartWeb</fullName>
            </value>
            <value>
                <fullName>Epic Interapp Linking</fullName>
            </value>
            <value>
                <fullName>Patients</fullName>
            </value>
            <value>
                <fullName>Amtelco</fullName>
            </value>
            <value>
                <fullName>Red Alerts</fullName>
            </value>
            <value>
                <fullName>Everbridge SMTP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient Integration</fullName>
                <isActive>false</isActive>
                <label>Patient Integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>