force-app/main/default/objects/Asset/fields/HRCSVC_Alarm_Navigator_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Alarm_Navigator_SW_Version__c</fullName>
    <description>SE-1173</description>
    <label>Alarm Navigator-SW Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alarm Navigator 1.6</fullName>
            </value>
            <value>
                <fullName>Alarm Navigator 2.0</fullName>
            </value>
            <value>
                <fullName>Alarm Navigator 1.1</fullName>
            </value>
            <value>
                <fullName>Alarm Navigator 1.3</fullName>
            </value>
            <value>
                <fullName>Alarm Navigator 1.3.1</fullName>
            </value>
            <value>
                <fullName>Alarm Navigator 1.4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>