force-app/main/default/objects/Asset/fields/HRCSVC_Alarm_Navigator_UI_Integration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Alarm_Navigator_UI_Integration__c</fullName>
    <description>SE-1173</description>
    <label>Alarm Navigator- UI Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>AllScripts</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>