force-app/main/default/objects/Asset/fields/HRCSVC_Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset_Category__c</fullName>
    <label>Asset Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loaner</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Trial/Evaluation</fullName>
            </value>
            <value>
                <fullName>Test Equipment</fullName>
            </value>
            <value>
                <fullName>Sales Demo</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>