force-app/main/default/objects/Asset/fields/HRCSVC_Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset_Owner__c</fullName>
    <description>SE-198</description>
    <formula>Owner.Full_Name__c</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>