force-app/main/default/objects/Asset/fields/HRCSVC_Asset_Tracking__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Asset Tracking</label>
    <type>Checkbox</type>
</CustomField>