force-app/main/default/objects/Asset/fields/HRCSVC_BedComm_Bedside_Device_Licenses__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedComm_Bedside_Device_Licenses__c</fullName>
    <description>SE-1173</description>
    <label>BedComm- Bedside Device Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>