force-app/main/default/objects/Asset/fields/HRCSVC_BedComm_Bedside_Device_Types__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedComm_Bedside_Device_Types__c</fullName>
    <description>SE-1173</description>
    <label>BedComm- Bedside Device Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perle</fullName>
            </value>
            <value>
                <fullName>CarePanel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>