force-app/main/default/objects/Asset/fields/HRCSVC_BedComm_HL7_Data_Inbound__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedComm_HL7_Data_Inbound__c</fullName>
    <description>SE-1173</description>
    <label>BedComm- HL7 Data Inbound</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>AllScripts</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Cerner iBus</fullName>
            </value>
            <value>
                <fullName>Nuvon</fullName>
            </value>
            <value>
                <fullName>iSirona</fullName>
            </value>
            <value>
                <fullName>Ancillary Device Vendor Gateways</fullName>
            </value>
            <value>
                <fullName>Mindray Accutorr</fullName>
            </value>
            <value>
                <fullName>Philips VS2/VS4</fullName>
            </value>
            <value>
                <fullName>GE VC150</fullName>
            </value>
            <value>
                <fullName>Draeger Gateway</fullName>
            </value>
            <value>
                <fullName>Welch Allyn Gateway</fullName>
            </value>
            <value>
                <fullName>BedMasterEx</fullName>
            </value>
            <value>
                <fullName>WAVE Clinical Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>