force-app/main/default/objects/Asset/fields/HRCSVC_BedComm_HL7_Data_Outbound__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedComm_HL7_Data_Outbound__c</fullName>
    <description>SE-1173</description>
    <label>BedComm- HL7 Data Outbound</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>AllScripts</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>BedMasterEx</fullName>
            </value>
            <value>
                <fullName>WAVE Clinical Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>