force-app/main/default/objects/Asset/fields/HRCSVC_BedComm_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedComm_SW_Version__c</fullName>
    <description>SE-1173</description>
    <label>BedComm- SW Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BedComm 2.5</fullName>
            </value>
            <value>
                <fullName>BedComm 2.5.1</fullName>
            </value>
            <value>
                <fullName>BedComm 2.6</fullName>
            </value>
            <value>
                <fullName>BedComm 2.7</fullName>
            </value>
            <value>
                <fullName>BedComm 2.8</fullName>
            </value>
            <value>
                <fullName>BedComm 1.9</fullName>
            </value>
            <value>
                <fullName>BedComm 2.0</fullName>
            </value>
            <value>
                <fullName>BedComm 2.1</fullName>
            </value>
            <value>
                <fullName>BedComm 2.2.0</fullName>
            </value>
            <value>
                <fullName>BedComm 2.3.1</fullName>
            </value>
            <value>
                <fullName>BedComm 2.4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>