force-app/main/default/objects/Asset/fields/HRCSVC_BedMaster_Bed_Licenses__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedMaster_Bed_Licenses__c</fullName>
    <description>SE-1173</description>
    <label>BedMaster- Bed Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>