force-app/main/default/objects/Asset/fields/HRCSVC_BedMaster_Epic_Button_UI__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedMaster_Epic_Button_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>BedMaster- Epic Button/UI</label>
    <type>Checkbox</type>
</CustomField>