force-app/main/default/objects/Asset/fields/HRCSVC_BedMaster_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BedMaster_Version__c</fullName>
    <description>SE-1173</description>
    <label>BedMaster Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BedMaster Ex 5.1</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 5.1.1</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 5.1.2</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 5.1.3</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 5.2</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 3.9.1</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.0.17</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.1.1</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.1.10</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.1.11</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.1.12</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.1.7</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.1.8</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.2.1</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.3.0</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.3.1</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.3.2</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 4.3.3</fullName>
            </value>
            <value>
                <fullName>BedMaster Ex 5.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>