force-app/main/default/objects/Asset/fields/HRCSVC_Care_Sign__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Care_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Care Sign</label>
    <type>Checkbox</type>
</CustomField>