force-app/main/default/objects/Asset/fields/HRCSVC_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Certification_Date__c</fullName>
    <description>SE-1023</description>
    <label>Certification Date</label>
    <type>Date</type>
</CustomField>