force-app/main/default/objects/Asset/fields/HRCSVC_Design_Life__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Design_Life__c</fullName>
    <description>The design life of the asset. Used in order to make a complaint qualification determination. SE-163</description>
    <label>Design Life</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>