force-app/main/default/objects/Asset/fields/HRCSVC_Device_Age__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Device_Age__c</fullName>
    <formula>(TODAY() -ManufactureDate )/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Age (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>