force-app/main/default/objects/Asset/fields/HRCSVC_Enterprise_Server__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Enterprise_Server__c</fullName>
    <description>SE-1173</description>
    <label>Parent Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>