force-app/main/default/objects/Asset/fields/HRCSVC_Health_System_IDN__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Health_System_IDN__c</fullName>
    <description>SE-1173</description>
    <label>Health System / IDN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>