force-app/main/default/objects/Asset/fields/HRCSVC_HL7__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_HL7__c</fullName>
    <description>SE-1173</description>
    <label>HL7</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADT</fullName>
            </value>
            <value>
                <fullName>Outbound Bed Data</fullName>
            </value>
            <value>
                <fullName>Inbound Falls</fullName>
            </value>
            <value>
                <fullName>Care Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>