force-app/main/default/objects/Asset/fields/HRCSVC_Item_Number_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Item_Number_Description__c</fullName>
    <description>SE-1173</description>
    <label>Item Number Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>