force-app/main/default/objects/Asset/fields/HRCSVC_LA_CPV__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_LA_CPV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>LA/CPV</label>
    <type>Checkbox</type>
</CustomField>